kubernetes/catalog/esphome/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/digiblur/unraid-docker-templates/master/esphome.xml
# Category: HomeAutomation, Tools-Utilities
# Stars: 169 | Downloads: 68126473
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  namespace: esphome
  labels:
    app.kubernetes.io/name: esphome
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: esphome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: esphome
    spec:
      hostNetwork: true
      containers:
        - name: esphome
          image: ghcr.io/esphome/esphome:stable
          ports:
            - containerPort: 6052
              protocol: TCP
              name: webui
          volumeMounts:
            - name: esphome-data-0
              mountPath: "/config"
            - name: esphome-data-1
              mountPath: "/data"
            - name: esphome-data-2
              mountPath: "/cache"
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      volumes:
        - name: esphome-data-0
          persistentVolumeClaim:
            claimName: esphome-data-0
        - name: esphome-data-1
          persistentVolumeClaim:
            claimName: esphome-data-1
        - name: esphome-data-2
          persistentVolumeClaim:
            claimName: esphome-data-2
---
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: esphome
  labels:
    app.kubernetes.io/name: esphome
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: esphome
  ports:
    - port: 6052
      targetPort: 6052
      protocol: TCP
      name: webui
  type: ClusterIP
