kubernetes/catalog/esphome/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: esphome
  namespace: esphome
  labels:
    app.kubernetes.io/name: esphome
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`esphome.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: esphome
          port: 6052
  tls:
    secretName: int-rlservers-com-tls
